--- a/PigHouse/Base.lproj/Main.storyboard
+++ b/PigHouse/Base.lproj/Main.storyboard
@@ -160,10 +160,10 @@
             </objects>
             <point key="canvasLocation" x="1056.8" y="197.45127436281859"/>
         </scene>
-        <!--House Detail Controller-->
+        <!--订房-->
         <scene sceneID="KN4-Z6-QDL">
             <objects>
-                <viewController id="B03-Mj-NjP" customClass="HouseDetailController" customModule="PigHouse" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="订房" id="B03-Mj-NjP" customClass="HouseDetailController" customModule="PigHouse" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EVU-e8-Kac"/>
                         <viewControllerLayoutGuide type="bottom" id="S7e-nd-Fff"/>
@@ -172,6 +172,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBj-AE-UAa">
+                                <rect key="frame" x="16" y="386" width="343" height="1"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="qft-TQ-YDt"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房价：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcd-jH-Fml">
+                                <rect key="frame" x="16" y="395" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥90/晚" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-W7-ezp">
+                                <rect key="frame" x="298" y="395" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Xv-X1-ts4">
+                                <rect key="frame" x="16" y="424" width="343" height="1"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="vWS-om-7M7"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房号：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBQ-rD-Y5P">
+                                <rect key="frame" x="16" y="433" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lU-Ja-b8E">
+                                <rect key="frame" x="330" y="433" width="29" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qcN-UH-Mip">
+                                <rect key="frame" x="16" y="462" width="343" height="1"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="isf-F5-Ch5"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="室号：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ae6-b3-yze">
+                                <rect key="frame" x="16" y="471" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2804" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUl-JP-UeO">
+                                <rect key="frame" x="317" y="471" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhF-8C-mWf">
+                                <rect key="frame" x="16" y="500" width="343" height="1"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="KBc-vR-8N3"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地址：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="367-Bk-BYC">
+                                <rect key="frame" x="16" y="509" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="大寨路6号莱安逸珲1期19号楼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zl0-Xw-qW2">
+                                <rect key="frame" x="132" y="509" width="227" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8P-SN-Zxv">
                                 <rect key="frame" x="-4" y="64" width="383" height="200"/>
                                 <subviews>
@@ -205,25 +281,75 @@
                                 </constraints>
                                 <state key="normal" title="确认定房"/>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vwy-BU-yek">
+                                <rect key="frame" x="16" y="272" width="343" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间类型：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtU-bd-H18">
+                                        <rect key="frame" x="0.0" y="0.0" width="87" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="5o1-jF-iC4"/>
+                                    <constraint firstItem="mtU-bd-H18" firstAttribute="leading" secondItem="Vwy-BU-yek" secondAttribute="leading" id="ApO-DP-7EG"/>
+                                    <constraint firstItem="mtU-bd-H18" firstAttribute="top" secondItem="Vwy-BU-yek" secondAttribute="top" id="I7w-b0-6p9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="NZl-pM-fTN" secondAttribute="leading" id="1P1-C7-gUh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7lU-Ja-b8E" secondAttribute="trailing" id="2tu-fK-tF4"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="fcd-jH-Fml" secondAttribute="leading" id="5Em-xX-95W"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="367-Bk-BYC" secondAttribute="leading" id="6Kz-IA-TQO"/>
+                            <constraint firstItem="wBj-AE-UAa" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" id="6Ph-uV-gtr"/>
+                            <constraint firstItem="VUl-JP-UeO" firstAttribute="top" secondItem="qcN-UH-Mip" secondAttribute="bottom" constant="8" id="8xk-27-aYp"/>
+                            <constraint firstItem="2Xv-X1-ts4" firstAttribute="top" secondItem="wBj-AE-UAa" secondAttribute="bottom" constant="37" id="ACz-Ob-jD6"/>
+                            <constraint firstItem="QCf-W7-ezp" firstAttribute="top" secondItem="wBj-AE-UAa" secondAttribute="bottom" constant="8" id="B0j-9G-v5K"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qcN-UH-Mip" secondAttribute="trailing" id="CcW-oO-34c"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Xv-X1-ts4" secondAttribute="trailing" id="ElF-cY-84l"/>
+                            <constraint firstItem="kBQ-rD-Y5P" firstAttribute="top" secondItem="2Xv-X1-ts4" secondAttribute="bottom" constant="8" id="FUx-gJ-fwz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="NZl-pM-fTN" secondAttribute="trailing" id="GJz-hY-GD2"/>
                             <constraint firstItem="S7e-nd-Fff" firstAttribute="top" secondItem="NZl-pM-fTN" secondAttribute="bottom" constant="20" id="Gc3-s5-FWh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Zl0-Xw-qW2" secondAttribute="trailing" id="IEH-7v-Xr9"/>
+                            <constraint firstItem="367-Bk-BYC" firstAttribute="top" secondItem="hhF-8C-mWf" secondAttribute="bottom" constant="8" id="JAS-Zx-HP9"/>
+                            <constraint firstItem="qcN-UH-Mip" firstAttribute="top" secondItem="2Xv-X1-ts4" secondAttribute="bottom" constant="37" id="LUq-ec-kfh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hhF-8C-mWf" secondAttribute="trailing" id="MSD-22-zpg"/>
+                            <constraint firstItem="2Xv-X1-ts4" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" id="Ocb-jO-YRN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VUl-JP-UeO" secondAttribute="trailing" id="RQP-U2-d0g"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wBj-AE-UAa" secondAttribute="trailing" id="VAm-uv-mQa"/>
+                            <constraint firstItem="Zl0-Xw-qW2" firstAttribute="top" secondItem="hhF-8C-mWf" secondAttribute="bottom" constant="8" id="aYU-ya-zvl"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="kBQ-rD-Y5P" secondAttribute="leading" id="d0X-Te-RVb"/>
+                            <constraint firstItem="Vwy-BU-yek" firstAttribute="top" secondItem="p8P-SN-Zxv" secondAttribute="bottom" constant="8" id="dGY-q3-FBH"/>
+                            <constraint firstItem="wBj-AE-UAa" firstAttribute="top" secondItem="Vwy-BU-yek" secondAttribute="bottom" constant="14" id="eL3-ob-m7a"/>
                             <constraint firstItem="p8P-SN-Zxv" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" constant="-20" id="fh9-XX-7tK"/>
                             <constraint firstItem="p8P-SN-Zxv" firstAttribute="top" secondItem="EVU-e8-Kac" secondAttribute="bottom" id="izB-0E-wX8"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="ae6-b3-yze" secondAttribute="leading" id="jBw-td-ZOE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QCf-W7-ezp" secondAttribute="trailing" id="kWg-mn-MLI"/>
+                            <constraint firstItem="hhF-8C-mWf" firstAttribute="top" secondItem="qcN-UH-Mip" secondAttribute="bottom" constant="37" id="mRK-wl-wqb"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="hhF-8C-mWf" secondAttribute="leading" id="moC-Yo-Bgm"/>
+                            <constraint firstItem="ae6-b3-yze" firstAttribute="top" secondItem="qcN-UH-Mip" secondAttribute="bottom" constant="8" id="oKj-fI-4qK"/>
+                            <constraint firstItem="Vwy-BU-yek" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" id="qja-lF-pBO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Vwy-BU-yek" secondAttribute="trailing" id="seZ-BL-tZd"/>
+                            <constraint firstItem="qcN-UH-Mip" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" id="tdK-7g-X0f"/>
+                            <constraint firstItem="fcd-jH-Fml" firstAttribute="top" secondItem="wBj-AE-UAa" secondAttribute="bottom" constant="8" id="wCS-Db-CXA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="p8P-SN-Zxv" secondAttribute="trailing" constant="-20" id="zUg-7U-6QQ"/>
+                            <constraint firstItem="7lU-Ja-b8E" firstAttribute="top" secondItem="2Xv-X1-ts4" secondAttribute="bottom" constant="8" id="zwO-Kk-Vk4"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="pageControl" destination="3HQ-V7-2bf" id="YWj-Yl-ZGb"/>
+                        <outlet property="roomTypeView" destination="Vwy-BU-yek" id="DUo-Hz-0cp"/>
+                        <outlet property="roomTypeViewHeight" destination="5o1-jF-iC4" id="tE3-9O-XVh"/>
                         <outlet property="scrollView" destination="LLI-Ue-DEA" id="Xac-MX-E38"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kio-Fb-NdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1852" y="198"/>
+            <point key="canvasLocation" x="1852" y="197.45127436281859"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0sX-Oe-Ent">
