--- a/PigHouse/Base.lproj/Main.storyboard
+++ b/PigHouse/Base.lproj/Main.storyboard
@@ -185,8 +185,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥90/晚" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-W7-ezp">
-                                <rect key="frame" x="311.5" y="402" width="47.5" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择房间类型" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-W7-ezp">
+                                <rect key="frame" x="266" y="402" width="93" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -204,8 +204,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lU-Ja-b8E">
-                                <rect key="frame" x="336.5" y="449" width="22.5" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择房间类型" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lU-Ja-b8E">
+                                <rect key="frame" x="266" y="449" width="93" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -280,6 +280,9 @@
                                     <constraint firstAttribute="height" constant="45" id="4DH-WX-2Xj"/>
                                 </constraints>
                                 <state key="normal" title="确认定房"/>
+                                <connections>
+                                    <segue destination="pwb-xY-R5F" kind="presentation" id="fiE-io-JfW"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vwy-BU-yek">
                                 <rect key="frame" x="16" y="272" width="343" height="100"/>
@@ -354,6 +357,87 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kio-Fb-NdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1852" y="197.45127436281859"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="FTE-rH-eXe">
+            <objects>
+                <viewController id="pwb-xY-R5F" customClass="LoginViewController" customModule="PigHouse" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DaS-b6-XDp"/>
+                        <viewControllerLayoutGuide type="bottom" id="gyU-Z3-RsH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="85z-CO-S4Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJc-b1-wiv">
+                                <rect key="frame" x="16" y="218" width="343" height="45"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="j0l-87-8Ld"/>
+                                </constraints>
+                                <state key="normal" title="确认定房"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入您的手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R5E-Dn-Ctx">
+                                <rect key="frame" x="16" y="100" width="343" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="SZA-Qo-6Sg"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A46-Ud-UCb">
+                                <rect key="frame" x="16" y="153" width="243" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="X10-SO-eKM"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p4G-Un-eNY">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <items>
+                                    <navigationItem title="登录" id="qnE-yS-bVW">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="t0j-7B-bH0">
+                                            <connections>
+                                                <action selector="cancelAction:" destination="pwb-xY-R5F" id="WNA-Wy-Oi8"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdP-9B-qtb">
+                                <rect key="frame" x="267" y="152.5" width="92" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="ZIB-SY-xCp"/>
+                                </constraints>
+                                <state key="normal" title="获取验证码"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="VJc-b1-wiv" secondAttribute="leading" id="1pe-eg-1vg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="R5E-Dn-Ctx" secondAttribute="trailing" id="DrE-41-5eG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VJc-b1-wiv" secondAttribute="trailing" id="KLg-XM-axC"/>
+                            <constraint firstItem="gdP-9B-qtb" firstAttribute="leading" secondItem="A46-Ud-UCb" secondAttribute="trailing" constant="8" id="KTy-Ts-ckg"/>
+                            <constraint firstItem="gdP-9B-qtb" firstAttribute="centerY" secondItem="A46-Ud-UCb" secondAttribute="centerY" id="TI3-Zz-dBe"/>
+                            <constraint firstItem="A46-Ud-UCb" firstAttribute="top" secondItem="R5E-Dn-Ctx" secondAttribute="bottom" constant="8" id="X4L-TR-l9e"/>
+                            <constraint firstItem="VJc-b1-wiv" firstAttribute="top" secondItem="A46-Ud-UCb" secondAttribute="bottom" constant="20" id="fjB-l0-mCD"/>
+                            <constraint firstItem="R5E-Dn-Ctx" firstAttribute="leading" secondItem="85z-CO-S4Y" secondAttribute="leadingMargin" id="gKo-7a-PFr"/>
+                            <constraint firstItem="R5E-Dn-Ctx" firstAttribute="top" secondItem="DaS-b6-XDp" secondAttribute="bottom" constant="80" id="qrE-19-Nrd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="A46-Ud-UCb" secondAttribute="trailing" constant="100" id="sg5-cT-rlX"/>
+                            <constraint firstItem="A46-Ud-UCb" firstAttribute="leading" secondItem="85z-CO-S4Y" secondAttribute="leadingMargin" id="tNO-Sk-rlU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gdP-9B-qtb" secondAttribute="trailing" id="vCr-9D-8XF"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clf-Vr-Djh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2650" y="198"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0sX-Oe-Ent">
